# omniload

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitleaksignore  .readthedocs.yml  .vale.ini  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test.env.template
.github/workflows/: deploy-docs.yml  docs.yml  release-oci.yml  release-pypi.yml  release.yml  secrets-scan.yml  tests.yml
docs/: backlog.md  changelog.md  conf.py  index.md  requirements.txt  sandbox.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: CopyPageButton.vue
docs/_static/splash/: demo.tape
docs/commands/: example-uris.md  ingest.md
docs/getting-started/: core-concepts.md  data-masking.md  file-format-routing.md  incremental-loading.md  python-api.md  quickstart.md
docs/supported-sources/: adjust.md  airtable.md  allium.md  amqp.md  anthropic.md  appleads.md  applovin.md  applovin_max.md  appsflyer.md  appstore.md  asana.md  athena.md  attio.md  azure-blob-storage.md  azure-data-lake-storage.md  azure-storage.md  bigquery.md  bruin.md  bson.md  cbor.md  chess.md  clickhouse.md  clickup.md  couchbase.md  cratedb.md  csv.md  cursor.md  custom_queries.md  customerio.md  databricks-files.md  databricks-warehouse.md  databricks.md  db2.md  docebo.md  dropbox.md  duckdb.md  dune.md  dynamodb.md  elasticsearch.md  facebook-ads.md  (+99 more)
docs/tutorials/: load-kinesis-bigquery.md  load-personio-duckdb.md  load-stripe-postgres.md
ingestr/: main_test.py
ingestr/src/: sources.py
ingestr/src/anthropic/: helpers.py
omniload/: __init__.py  api.py  api_test.py  conftest.py  error.py  main.py  main_test.py  model.py
omniload/codec/: filter.py  masking.py  python.py
omniload/core/: factory.py  model.py  registry.py  router.py
omniload/source/adjust/: api.py
omniload/source/airtable/: adapter.py
omniload/source/appsflyer/: api.py
omniload/source/appstore/: adapter.py  client.py
omniload/source/asana/: adapter.py  helpers.py  settings.py
omniload/source/attio/: api.py  helpers.py
omniload/source/bing_webmaster/: adapter.py  helpers.py  settings.py
omniload/source/blobstorage/: api.py
omniload/source/bruin/: api.py
omniload/source/chess/: adapter.py  api.py  helpers.py  settings.py
omniload/source/clickup/: adapter.py
omniload/source/couchbase/: api.py  helpers.py
omniload/source/customer_io/: adapter.py
omniload/source/deltalake/: adapter.py  api.py
omniload/source/docebo/: adapter.py  api.py  client.py
omniload/source/dynamodb/: api.py
omniload/source/elasticsearch/: api.py
omniload/source/excel/: adapter.py  api.py
omniload/source/facebook_ads/: adapter.py  api.py  exceptions.py  helpers.py  settings.py  utils.py
omniload/source/filesystem/: adapter.py  api.py  base.py  error.py  helpers.py  local.py  model.py  readers.py  remote.py  router.py
omniload/source/fireflies/: api.py
omniload/source/fluxx/: helpers.py
omniload/source/freshdesk/: adapter.py  api.py  client.py  settings.py
omniload/source/github/: adapter.py  api.py  helpers.py  queries.py  settings.py
omniload/source/google_ads/: adapter.py
omniload/source/google_analytics/: adapter.py  helpers.py  settings.py
omniload/source/google_drive/: adapter.py  helpers.py  settings.py
omniload/source/google_sheets/: adapter.py  api.py
omniload/source/gorgias/: helpers.py
omniload/source/hostaway/: api.py
omniload/source/http/: api.py
omniload/source/jira/: api.py  (+2 more)
omniload/src/: blob_test.py  destinations.py  destinations_test.py  errors.py  factory.py  factory_test.py  filters.py  loader_test.py  masking.py  masking_test.py  partition.py  resource.py  sources.py  sources_test.py  table_definition.py  version.py
omniload/util/: auth.py  endpoint.py  filter.py  hint.py  http.py  loader.py  log.py  time.py  vs.py
release/oci/: Dockerfile  selftest.sh
resources/: demo.tape
src/dlt_filesystem/: error.py
src/omniload/: api.py  error.py  main.py  model.py
tests/: conftest.py  settings.py  util.py
tests/assets/: create_replace.xlsx  privatekey-fingerprint.txt  privatekey.pem
tests/container/: model.py
tests/database/: conftest.py  operations.py  test_arrow.py  test_couchbase.py  test_duckdb.py  test_dynamodb.py  test_elasticsearch.py  test_general.py  test_kafka.py  test_mongodb.py  test_mysql.py
tests/dlt_filesystem/: test_source_hints.py  test_source_incremental.py  test_source_local.py  test_source_remote.py  test_target_local.py
tests/main/: destinations_test.py  test_api.py  test_app.py  test_blob.py  test_container.py  test_core.py  test_destinations.py  test_factory.py  test_file_source.py  test_invoke_helper.py  test_loader.py  test_masking.py  test_sources.py  test_targets.py
tests/saas/: test_adjust.py  test_anthropic.py  test_applovin.py  test_docebo.py  test_facebook_ads.py  test_fireflies.py  test_fluxx.py  test_fundraiseup.py  test_google_ads.py  test_google_analytics.py  test_gorgias.py  test_hostaway.py  test_intercom.py  test_klaviyo.py  test_linkedin.py  test_linkedin_ads.py  test_mailchimp.py  test_mqbridge.py  test_primer.py  test_reddit_ads.py  test_revenuecat.py  test_shopify.py  test_smartsheets.py  test_snapchat.py  test_stripe.py  test_tiktok.py
tests/service/: test_airtable.py  test_appsflyer.py  test_appstore.py  test_facebook_ads.py  test_fireflies.py  test_fluxx.py  test_frankfurter.py  test_fundraiseup.py  test_github.py  test_google_ads.py  test_google_analytics.py  test_gorgias.py  test_intercom.py  test_jira.py  test_linear.py  test_linkedin.py  test_linkedin_ads.py  test_pinterest.py  test_reddit_ads.py  test_revenuecat.py  test_shopify.py  test_snapchat.py  test_stripe.py  test_tiktok.py  test_trustpilot.py
tests/storage/: test_filesystem.py
tests/stream/: conftest.py  mosquitto.conf  test_kafka.py  test_mqbridge.py  test_mqbridge_brokerless.py  test_mqbridge_kafka.py  test_mqbridge_mqtt.py
tests/util/: __init__.py  common.py  db.py
tests/warehouse/: conftest.py  container.py  manager.py  model.py  operations.py  settings.py
(+418 files in other folders)
