[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "versioningit",
]

[project]
name = "omniload"
description = "omniload is a polyglot data loader based on dlt. Copy data between any source and any destination."
readme = "README.md"
license = "MIT"
maintainers = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
authors = [
  { name = "Burak Karakan", email = "burak.karakan@getbruin.com" },
  { name = "Mustafa Ersan" },
  { name = "Sanju Shah Gupta" },
  { name = "Saravjeet 'Aman' Singh" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Object Brokering",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [ "version" ]
dependencies = [
  "adlfs",
  "aiohttp<4",
  "asana<6",
  "click<8.5",
  "clickhouse-connect>=0.8,<2",
  "clickhouse-driver<0.3",
  "clickhouse-sqlalchemy<0.4",
  "colorlog<7",
  "confluent-kafka<2.16",
  "couchbase>=4,<5",
  "databricks-sql-connector<5",
  "databricks-sqlalchemy<3",
  "dataclasses-json<0.7",
  "dlt<1.29",
  "dlt-cratedb @ git+https://github.com/zerotired/dlt-cratedb.git@fix-dynamic-install",
  "duckdb<1.6",
  "duckdb-engine<0.18",
  "elasticsearch<10",
  "facebook-business<26",
  "flatten-json<0.2",
  "gcsfs",
  "google-ads<32",
  "google-analytics-data<0.24",
  "google-api-python-client<3",
  "google-auth<3",
  "google-cloud-bigquery-storage<3",
  "google-cloud-spanner<4",
  "influxdb-client<2",
  "mq-bridge-py>=0.3.2,<0.4",
  "mysql-connector-python<10",
  "oracledb<5",
  "orjson<4",
  "pendulum>=3,<4",
  "polars<2",
  "psycopg2-binary<3",
  "py-machineid<2",
  "pyairtable<4",
  "pyarrow>=18,<26",
  "pyathena<4",
  "pymongo<5",
  "pymongoarrow<2",
  "pymysql<2",
  "pyrate-limiter<5",
  "python-quickbooks<0.10",
  "requests<3",
  "rudder-sdk-python<2.2",
  "s3fs",
  "simple-salesforce<2",
  "smartsheet-python-sdk<5",
  "snowflake-connector-python>=3.18,<5",
  "snowflake-sqlalchemy<2",
  "sqlalchemy<2.1",
  "sqlalchemy-bigquery<2",
  "sqlalchemy-cratedb<1",
  "sqlalchemy-hana<5",
  "sqlalchemy-postgresql-relaxed<0.2",
  "sqlalchemy-redshift<2",
  "sqlalchemy-spanner<2",
  "stripe<16",
  "tldextract<6",
  "toolz<2",
  "tqdm<5",
  "trino[sqlalchemy]==0.338.0",
  "typer<0.27",
  "urllib3<2.8",
]
optional-dependencies.develop = [
  "pkginfo<2",
  "poethepoet<1",
  "pyproject-fmt<3",
  "pytest-repeat<1",
  "ruff<0.16",
  "ty==0.0.58",
  "validate-pyproject<1",
]
optional-dependencies.full = [ "omniload[ibm-db,iterable,odbc,oracle]" ]
optional-dependencies.ibm-db = [
  "ibm-db<4; platform_machine!='aarch64'",
  "ibm-db-sa<0.5; platform_machine!='aarch64'",
]
# Long-tail file formats (MessagePack via iterabledata; CBOR via cbor2 directly). iterabledata
# core is light (chardet, tqdm); each format's decoder is its own extra, so the shipped
# tranche's decoders (msgpack, cbor2) are pulled explicitly here. Note: iterabledata's import
# package name is the generic `iterable`, which can shadow a same-named local package.
# See omniload/source/filesystem/format/iterable_codec.py.
optional-dependencies.iterable = [
  "cbor2<7",
  "iterabledata>=1.0.15,<2",
  "msgpack<2",
]
optional-dependencies.odbc = [
  "pyodbc<5.4",
]
optional-dependencies.oracle = [
  "oracledb>=2.0.0",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "boto3<2",
  "pendulum[test]>=3,<4",
  "pytest<10",
  "pytest-asyncio<2",
  "pytest-cov<8",
  "pytest-xdist[psutil]<4",
  "testcontainers[cratedb,mysql,postgres] @ git+https://github.com/testcontainers/testcontainers-python.git@main",
  "types-requests<3",
  "verlib2",
]
urls.Changelog = "https://omniload.readthedocs.io/changelog.html"
urls.Documentation = "https://omniload.readthedocs.io/"
urls.Issues = "https://github.com/panodata/omniload/issues"
urls.Repository = "https://github.com/panodata/omniload"
scripts.omniload = "omniload.main:main"

[tool.setuptools]
packages.find = {}

[tool.ruff]
line-length = 88
lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]
# lint.ignore = [ "E501" ]
lint.extend-ignore = [
  # Module `xxx` shadows a Python standard-library module
  "A005",
  # raise-without-from-inside-except
  "B904",
  # zip() without an explicit strict= parameter
  "B905",
  # Found commented-out code
  "ERA001",
  # collapsible-else-if
  "PLR5501",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
  # Unnecessary `elif` after `raise` statement
  "RET506",
  # Unnecessary `else` after `continue` statement
  "RET507",
  # Unnecessary `else` after `break` statement
  "RET508",
  # Probable insecure usage of temporary file or directory
  "S108",
]
lint.per-file-ignores."omniload/api.py" = [
  # line-too-long
  "E501",
]
lint.per-file-ignores."omniload/core/router.py" = [
  # line-too-long
  "E501",
]
lint.per-file-ignores."omniload/{source,target}/*" = [
  # TODO: Review B008
  #       Do not perform function call in argument defaults;
  #       instead, perform the call within the function,
  #       or read the default from a module-level singleton variable
  "B008",
  # Unnecessary list comprehension (rewrite as a set comprehension)
  "C403",
  # Unnecessary `dict()` call (rewrite as a literal)
  "C408",
  # Unnecessary `list()` call within `sorted()`
  "C414",
  # Unnecessary list comprehension (rewrite using `list()`)
  "C416",
  # Unnecessary `map()` usage (rewrite using a generator expression)
  "C417",
  # line-too-long
  "E501",
  # FIXME: `print` found
  "T201",
]
lint.per-file-ignores."tests/*" = [
  # Variable is shadowing a Python builtin
  "A001",
  # Function argument is shadowing a Python builtin
  "A002",
  # Unnecessary list comprehension (rewrite using `list()`)
  "C416",
  # line-too-long
  "E501",
  # Allow use of `assert`, and `print`.
  "S101",
  # Possible SQL injection vector through string-based query construction
  "S608",
  # `print` found
  "T201",
]
lint.per-file-ignores."tests/saas/*" = [
  # Possible hardcoded password assigned to argument
  "S106",
]
lint.per-file-ignores."tests/{warehouse,util}/*" = [
  # `try`-`except`-`pass` detected, consider logging the exception
  "S110",
  # Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
  "S310",
]

[tool.pytest]
ini_options.minversion = "2.0"
ini_options.testpaths = [
  "examples",
  "omniload",
  "tests",
]
ini_options.pythonpath = [
  ".",
]
ini_options.addopts = """
  -rfEXsS -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  --numprocesses auto
  """
ini_options.markers = [
  "integration: requires Docker/testcontainers or external credentials",
  "odbc: requires an ODBC driver manager and pyodbc",
]
ini_options.xfail_strict = true
ini_options.log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
# addopts = "-vvv -p no:warnings -rP"

[tool.coverage]
run.omit = [ "tests/**" ]

[tool.poe]
tasks.check = [
  "lint",
  "test",
]
tasks.docs-autobuild = [
  { cmd = "uv pip install -r docs/requirements.txt;" },
  { cmd = "sphinx-autobuild --open-browser docs docs/_build" },
]
tasks.docs-html = [
  { cmd = "uv pip install -r docs/requirements.txt;" },
  { cmd = "sphinx-build -W --keep-going docs docs/_build" },
]
tasks.docs-linkcheck = [
  { cmd = "uv pip install -r docs/requirements.txt;" },
  { cmd = "sphinx-build -j auto -W --keep-going -b linkcheck docs docs/_build" },
]
tasks.docs-lint = { cmd = "vale docs" }
tasks.format = [
  # Format project metadata.
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
  # Format code.
  # Configure Ruff not to auto-fix a few items that are useful in workbench mode.
  # e.g.: unused imports (F401), unused variables (F841), `print` statements (T201), commented-out code (ERA001)
  { cmd = "ruff format" },
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001" },
]
tasks.lint = [
  { cmd = "ruff format --check" },
  { cmd = "ruff check" },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "ty check" },
]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --verbose --skip-existing dist/*" },
]
tasks.test = { cmd = "pytest", env = { TESTCONTAINERS_RYUK_DISABLED = "true" } }
# Docker-free unit lane: skip everything marked `integration` (Docker/credentials).
tasks.test-fast = { cmd = "pytest -m 'not integration'", env = { TESTCONTAINERS_RYUK_DISABLED = "true" } }
# Run a docker container to build and run omniload.
tasks.docker-shell = { cmd = "docker run -v $(PWD):/root/code -w /root/code -it --rm --entrypoint /bin/bash python:3.11" }

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
